# cuda-study

./: 1_hello  1_hello.cu  2_errorHandler  2_errorHandler.cu  3_test  3_test.cu  CMakeLists.txt
Solutions/chapter02/: a.out  sumMatrixOnGPU-2D-grid-2D-block-integer  sumMatrixOnGPU-2D-grid-2D-block-integer.cu
common/: common.h
cpp/: 01.cpp  02.cpp  03refer.cpp
